# hookNativeThread

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/yxy/helloworld/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Mycpp.cpp
app/src/main/java/com/yxy/helloworld/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/yxy/helloworld/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
